# fl-components-public

./: .gitignore  LICENSE-BSD3Clause  LICENSE-PSF  LICENSE-PSL  LICENSE-PostgreSQL  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/fl_client/: Dockerfile  mypy.ini  pyproject.toml
apps/fl_client/src/fl_client/: config.py  interface.py  main.py  stages.py
apps/fl_client/src/fl_client/utils/: responses_utils.py
apps/fl_client/tests/: test_interface.py  test_stages.py
apps/fl_server/: Dockerfile  pyproject.toml
apps/fl_server/src/fl_server/: app.py  config.py  interfaces.py  main.py  requires.py  stages.py
apps/fl_server/src/fl_server/models/: task.py
apps/fl_server/src/fl_server/utils/: app_utils.py  driver_utils.py  mlflow_utils.py  requires_utils.py
apps/fl_server/tests/: test_app.py  test_app_utils.py  test_driver_utils.py  test_main.py  test_requires.py  test_stages.py
apps/restapi/: Dockerfile  pyproject.toml
apps/restapi/src/restapi/: config.py  db.py  main.py  status_updates.py
apps/restapi/src/restapi/routers/: tasks.py
apps/restapi/tests/: test_status_updates.py  test_tasks.py
common/: Dockerfile  mypy.ini  pyproject.toml
common/fl_models/iris/: aggregator.py  fl_model.py  local_learner.py  utils.py
common/interfaces/: array_serde.py  mlflow_client.py  pytorch.py  rabbitmq_client.py  recordset.py  utils.py
common/interfaces/tests/: test_array_serde.py  test_mlflow.py  test_rabbitmq.py  test_torch.py  test_utils.py
common/schemas/: task.py
common/schemas/tests/: test_task.py
common/utils/src/: mlflow_utils.py
common/utils/src/flower_utils/: driver.py  requires.py  responses.py  serde.py  server_app.py
common/utils/src/ml_integrations/: pytorch.py
common/utils/tests/: test_flower_driver.py  test_flower_serde.py  test_integration_pytorch.py  test_mlflow_utils.py
e2e/docker_full/: Dockerfile  docker-compose.yml  requirements.txt  run.sh  test.py
fl-chart/: Chart.yaml  values.yaml
fl-chart/templates/: _helpers.tpl  flsv-deployment.yaml  restapi-deployment.yaml  restapi-svc.yaml  superlink-all.yaml
fl_client/docker/: Dockerfile
fl_client/src/: config.py  interface.py  main.py  stages.py
fl_client/tests/: test_interface.py  test_stages.py
fl_server/docker/: Dockerfile
fl_server/k8s/: fl_server.yaml
fl_server/src/: app.py  config.py  main.py  requires.py  stages.py
fl_server/src/models/: task.py
fl_server/tests/: test_stages.py
jenkins/: Jenkinsfile.deploy  Jenkinsfile.helm  Jenkinsfile.images  superlink.jenkinsfile  superlink.jenkinsfile.kill
k8s/: dev-values.yaml  fl_client-deployment.yaml  superlink-dev.yaml
scripts/: clean.sh  generate_envs.sh  images.py  images_build.sh  images_push.sh  images_test.sh  tests.sh
templates/: dot_env
