# Poetry
[tool.poetry]
name = "fl-global"
description = "A global venv for running format and lint tools"
authors = [
    "Borja Arroyo Galende <borja.arroyog@upm.es>"
]
readme = "README.md"
package-mode = false
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11.0"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5"


# Test
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
target-version = "py311"

[tool.poetry-dynamic-versioning]
enable = true

# Build system
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
