# Poetry
[tool.poetry]
name = "synthema-fl-restapi"
description = "Application containing the restapi for the federated learning components"
authors = [
    "Borja Arroyo Galende <borja.arroyog@upm.es>"
]
readme = "README.md"
# package-mode = false
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11.0"
fastapi = "^0.111.1"
sqlmodel = "^0.0.21"
psycopg2-binary = "^2.9.9"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-env = "^1.1"
pytest-cov = "^5.0"
ruff = "^0.5"
mypy = "^1.10"
pip-licenses = "^5.0.0"

[tool.mypy]
python_version = "3.11"


# Test
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pytest_coverage.run]
omit = ["tests/*"]

[tool.ruff]
target-version = "py311"

[tool.poetry-dynamic-versioning]
enable = true

# Build system
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
